--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,9 +39,6 @@
 	  						<input type="submit" value="Inscription" name="button" /><br />
 						</form>
 					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -128,7 +125,7 @@
 					<div class="row">
 						<div class="col-xs-3"><img class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
 						<div class="col-xs-9 greenborder">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés :<br /> - Autonomie<br /> - Développement de la créativité<br /> - Sommeil<br /> - Concentration et canalisation de l’énergie<br /> - Relations dans la fratrie<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
 							<div onclick="songClicked('presentation');" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
 						</div> <!-- TEXT / AUDIO -->
@@ -271,7 +268,6 @@
 			const makeSong = (songName, autoPlay) => {
 				let image = "../images/" + categories.find((elem) => { let toReturn; elem.songs.forEach((el) => { if (el.name == songName) toReturn = el.name }); return toReturn == songName; });
 				image = image.image ? image.image : "../images/hm-logo.jpg";
-				console.log(image);
 				$("#playerContainer").html(`<audio id='player' width='100%' src='../audios/${songName}.mp3' preload='auto' type='audio/mpeg' height='40'></audio>`);
 				$('#player').mediaelementplayer({
 					success: function (mediaElement) {
