--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,7 +125,7 @@
 					<div class="row">
 						<div class="col-xs-3"><img class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
 						<div class="col-xs-9 greenborder">
-							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés :<br /> - Autonomie<br /> - Développement de la créativité<br /> - Sommeil<br /> - Concentration et canalisation de l’énergie<br /> - Relations dans la fratrie<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
+							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés : autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
 							<div onclick="songClicked('presentation');" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
 						</div> <!-- TEXT / AUDIO -->
