--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,12 @@ a, a:hover, a:focus, a:visited, a:target {
     padding-left: 5px;
 }
 
+.fa-file-pdf-o {
+	font-size: 20px !important;
+	padding-top: 10px;
+	color: red;
+}
+
 .whiteloadingbar {
 	margin: auto;
 	margin-top: -8px;
@@ -160,6 +166,7 @@ h3 {
 .list-img {
 	margin: auto;
 	width: 100%;
+	height: 100%;
 }
 
 h1 .title {
