--- a/views/formCategory.ejs
+++ b/views/formCategory.ejs
@@ -11,17 +11,19 @@
 	  <title>Backoffice</title>
   </head>
 	<body>
-		<div class="container-fluid">
+		<div class="container">
 			<%- include header.ejs %>
-			<form ref='uploadForm' action="/create/category" encType="multipart/form-data" method="post">
-				Nom de la categorie :<br />
-				<input required type="text" name="name"><br /><br />
-				Description :<br />
-				<input required type="text" name="description"><br /><br />
-				Image de présentation :<br />
-				<input required type="file" name="image" accept="image/*"><br /><br />
-				<input type="submit" value="Envoyer" name="button" />
-			</form>
+			<div class="row" style="font-size: 15px;">
+				<form ref='uploadForm' action="/create/category" encType="multipart/form-data" method="post">
+					Nom de la categorie :<br />
+					<input class="col-xs-12" required type="text" name="name"><br /><br />
+					Description :<br />
+					<input class="col-xs-12" required type="text" name="description"><br /><br />
+					Image de présentation :<br />
+					<input class="col-xs-12" required type="file" name="image" accept="image/*"><br /><br />
+					<input class="col-xs-offset-3 col-xs-6" type="submit" value="Envoyer" name="button" />
+				</form>
+			</div>
 		</div>
 		<!-- Scripts JS -->
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
