--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
 			<% } %>
 
 			<div style="background-color: black; color: white; padding: 20px 0px 20px 0px;" class="row">
-				<div class="<% if (typeof user !== 'undefined') { %>col-xs-12<% } else { %>col-md-9<% } %>">
+				<div class="<% if (typeof user !== 'undefined') { %>col-xs-12<% } else { %>col-md-8<% } %>">
 					<div class="row">
 						<div class="col-xs-3"><img class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
 						<div class="col-xs-9 greenborder">
@@ -132,12 +132,10 @@
 					</div>
 				</div> <!-- INFOS -->
 				<% if (typeof user == 'undefined') { %>
-					<div class=" text-center col-md-3">
+					<div style="margin-top: 25px;" class="text-center col-md-4">
 						<div class="row">
-							<div class="col-xs-6">
+							<div class="col-xs-12">
 								<a onclick="toggleForm();" href="#" class="formSwapLink">Créer mon compte</a>
-							</div>
-							<div class="col-xs-6">
 								<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Me connecter</a>
 							</div>
 							<br />
@@ -321,7 +319,7 @@
 
 			const toggleForm = () => {
 				$('.formSwapLink').toggleClass("activeLink");
-				$('.formSwapForm').toggle(1000);
+				$('.formSwapForm').toggle(0);
 			};
 
 			const getMaxHeight = (name) => {
