--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 						<h4 class="modal-title">Se connecter / S'inscrire :</h4>
 					</div>
-					<div class="modal-body text-center">
+					<div class="modal-body text-center" style="padding-top: 40px;">
 						<a onclick="toggleForm();" href="#" class="formSwapLink">Créer mon compte</a>
 						&nbsp;
 						<a onclick="toggleForm();" href="#" class="formSwapLink activeLink">Me connecter</a>
@@ -39,6 +39,7 @@
 	  						<input type="submit" value="Inscription" name="button" /><br />
 						</form>
 					</div>
+					<div class="modal-footer"><p class="text-center">Pour pouvoir écouter les programmes audio de La Bulle, merci de vous connecter ou vous inscrire ci-dessous</p></div>
 				</div>
 			</div>
 		</div>
@@ -162,33 +163,35 @@
 			</div> <!-- INFOS / FORMULAIRE -->
 			<div class="row categoryBody">
 				<% categories.forEach((categorie, index) => { %>
-					<div class="col-xs-offset-1 col-md-4 col-xs-10 category">
-						<div class="row"><div class="col-xs-12"><h3><%= categorie.name %></h3></div></div> <!-- TITRE -->
-						<div class="categoryDesc row">
-							<div class="col-xs-4"><img class="list-img" src="../images/<%= categorie.image %>" /></div>
-							<div class="col-xs-8"><p><%= categorie.description %></p></div>
-						</div> <!-- IMAGE / DESCRIPTION -->
-						<br />
-						<% categorie.songs.forEach((song) => { %>
-							<% if (typeof user !== 'undefined') { %>
-								<% var timeRead = user.timeRead.find((elem) => { return elem.name == song.name }); %>
-								<% var liked = user.likes.findIndex((elem) => { return elem.name == song.name }); %>
-							<% } %>
-							<div class="row">
-								<div onclick="songClicked('<%= song.name %>');" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
-								<div onclick="songClicked('<%= song.name %>');" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
-									<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
+					<div class="<%= index % 2 == 0 ? 'col-md-offset-1' : '' %> col-md-5 col-xs-12" style="padding-bottom: 50px;">
+						<div class="category">
+							<div class="row"><div class="col-xs-12"><h3><%= categorie.name %></h3></div></div> <!-- TITRE -->
+							<div class="categoryDesc row">
+								<div class="col-xs-4"><img class="list-img" src="../images/<%= categorie.image %>" /></div>
+								<div class="col-xs-8"><p><%= categorie.description %></p></div>
+							</div> <!-- IMAGE / DESCRIPTION -->
+							<br />
+							<% categorie.songs.forEach((song) => { %>
+								<% if (typeof user !== 'undefined') { %>
+									<% var timeRead = user.timeRead.find((elem) => { return elem.name == song.name }); %>
+									<% var liked = user.likes.findIndex((elem) => { return elem.name == song.name }); %>
+								<% } %>
+								<div class="row">
+									<div onclick="songClicked('<%= song.name %>');" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
+									<div onclick="songClicked('<%= song.name %>');" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
+										<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
+									</div>
+									<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite('<%= song.name %>')" class="fa fa-heart heartsong <%- song.name.replace(/\s/g,''); %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
+									<% if (typeof user !== 'undefined') { %><div class="col-xs-1"></div><% } %>
+									<% if (typeof user !== 'undefined') { %><div class="col-xs-1 song"><a target="_blank" title="Version text" href="../pdfs/<%= song.name %>.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div><% } %>
 								</div>
-								<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite('<%= song.name %>')" class="fa fa-heart heartsong <%- song.name.replace(/\s/g,''); %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
-								<% if (typeof user !== 'undefined') { %><div class="col-xs-1 song" style="font-size: 9px; margin-top: 8px;">Version text</div><% } %>
-								<% if (typeof user !== 'undefined') { %><div class="col-xs-1 song"><a target="_blank" href="../pdfs/<%= song.name %>.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div><% } %>
-							</div>
-						<% }); %>
+							<% }); %>
+						</div>
 					</div><!-- UNE LISTE -->
-					<div class="col-xs-1"></div>
+					<div class="<% index % 2 == 1 ? 'col-md-1' : '' %>"></div>
 				<% }); %>
 			</div> <!-- LISTES -->
-			<div style="background-color: #666666; color: white; padding: 20px 0 70px 0;" class="row">
+			<div style="background-color: #666666; color: white; padding: 20px 0 50px 0;" class="row">
 				<div class="col-xs-offset-2 col-xs-8">
 					<div class="greenborder row">
 						<div class="col-xs-12">
@@ -200,6 +203,9 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="row" style="padding-bottom: 50px;">
+				<div class="col-xs-12 text-center"><a href="#">contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/pdfs/cgu.pdf">CGU</a></div>
 			</div>
 			<div class="row">
 				<div id="playerContainer" class="col-xs-12"></div> <!-- AUDIO PLAYER -->
@@ -270,7 +276,16 @@
 			const makeSong = (songName, autoPlay) => {
 				let image = "../images/" + categories.find((elem) => { let toReturn; elem.songs.forEach((el) => { if (el.name == songName) toReturn = el.name }); return toReturn == songName; });
 				image = image.image ? image.image : "../images/hm-logo.jpg";
-				$("#playerContainer").html(`<audio id='player' width='100%' src='../audios/${songName}.mp3' preload='auto' type='audio/mpeg' height='40'></audio>`);
+				let categoryName;
+				categories.forEach((categorie) => {
+					let i = categorie.songs.findIndex((el) => {
+						return el.name.toString() == songName.toString();
+					});
+					console.log(categoryName);
+					if (i > -1) categoryName = categorie.name;
+				});
+				console.log(categoryName);
+				$("#playerContainer").html(`<div style="width: 100%;"><audio id='player' style="width: 100%;" src='../audios/${songName}.mp3' preload='auto' type='audio/mpeg' height='40'></audio></div>`);
 				$('#player').mediaelementplayer({
 					success: function (mediaElement) {
 						mediaElement.addEventListener('loadedmetadata', function(){
@@ -280,6 +295,7 @@
 								songCurrentTime = user.timeRead.find((elem) => { return elem.name == songName });
 							}
 							$('.mejs__controls').prepend(`<div style="padding-top: 8px; margin-right: 5px;" class="mejs__button"><img width="34" src="${image}"/></div>`);
+							$('.mejs__controls').prepend(`<div style="font-size: 10px; width: ${(categoryName.length + songName.length) * 10 - 5}px;padding-top: 18px; margin-right: 5px; color: white;" class="mejs__button">${categoryName} - ${songName}</div>`);
 							if (songCurrentTime) mediaElement.setCurrentTime(songCurrentTime.time >= mediaElement.duration ? 0 : songCurrentTime.time);
 							else mediaElement.setCurrentTime(0);
 							if (autoPlay) {
