--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
 						<div class="col-xs-9 greenborder">
 							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés : autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
-							<div onclick="songClicked('presentation');" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
+							<div onclick="songClicked(`presentation`);" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
 						</div> <!-- TEXT / AUDIO -->
 					</div>
 				</div> <!-- INFOS -->
@@ -177,11 +177,11 @@
 									<% var liked = user.likes.findIndex((elem) => { return elem.name == song.name }); %>
 								<% } %>
 								<div class="row">
-									<div onclick="songClicked('<%= song.name %>');" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
-									<div onclick="songClicked('<%= song.name %>');" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
+									<div onclick="songClicked(`<%= song.name %>`);" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
+									<div onclick="songClicked(`<%= song.name %>`);" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
 										<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
 									</div>
-									<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite('<%= song.name %>')" class="fa fa-heart heartsong <%- song.name.replace(/\s/g,''); %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
+									<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite(`<%= song.name %>`)" class="fa fa-heart heartsong <%- song.name.replace(/\s/g,''); %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
 									<% if (typeof user !== 'undefined') { %><div class="col-xs-1"></div><% } %>
 									<% if (typeof user !== 'undefined') { %><div class="col-xs-1 song"><a target="_blank" title="Version text" href="../pdfs/<%= song.name %>.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div><% } %>
 								</div>
