--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,10 +99,9 @@
 			<div style="background-color: #51E99D;" class="row">
 				<div class="col-xs-6"><img style="width: 250px; padding-top: 5px;" src="/images/hellomarcel-logo.png" /></div> <!-- TITRE HELLO MARCEL -->
 				<% if (typeof user !== 'undefined') { %>
-					<div class="col-xs-6"><span class="user-interface"><%= user.mail %><br /><a href="/logout">Se déconnecter</a> &nbsp; &nbsp; <a data-toggle="modal" data-target="#modalAccount" href="#">Gérer</a><% if (user.admin == true) { %>&nbsp; &nbsp; <a href="/backoffice">Backoffice</a> <% } %></span></div> <!-- INTERFACE USER TODO -->
+					<div class="col-xs-6"><span class="user-interface"><%= user.mail %><br /><a href="/logout">Se déconnecter</a> &nbsp; &nbsp; <a data-toggle="modal" data-target="#modalAccount" href="#">Mon compte</a><% if (user.admin == true) { %>&nbsp; &nbsp; <a href="/backoffice">Backoffice</a> <% } %></span></div> <!-- INTERFACE USER TODO -->
 				<% } %>
 			</div> <!-- HEADER -->
-			<div class="row" style="height: 10px; background-color: #2F8358;"></div>
 
 			<% if (typeof msg !== 'undefined') { %>
 				<div class="alert alert-danger fade in">
@@ -128,7 +127,7 @@
 						<div class="col-xs-9 greenborder">
 							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés : autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
-							<div onclick="songClicked(`presentation`);" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
+							<div onclick="songClicked(`presentation.mp3`);" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
 						</div> <!-- TEXT / AUDIO -->
 					</div>
 				</div> <!-- INFOS -->
@@ -174,16 +173,15 @@
 							<% categorie.songs.forEach((song) => { %>
 								<% if (typeof user !== 'undefined') { %>
 									<% var timeRead = user.timeRead.find((elem) => { return elem.name == song.name }); %>
-									<% var liked = user.likes.findIndex((elem) => { return elem.name == song.name }); %>
+									<% var liked = user.likes.findIndex((elem) => { return elem.name == song.fileName.replace(/\s/g,'').split('.')[0] }); %>
 								<% } %>
 								<div class="row">
-									<div onclick="songClicked(`<%= song.name %>`);" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
-									<div onclick="songClicked(`<%= song.name %>`);" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
+									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
+									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
 										<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
 									</div>
-									<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite(`<%= song.name %>`)" class="fa fa-heart heartsong <%- song.name.replace(/\s/g,''); %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
-									<% if (typeof user !== 'undefined') { %><div class="col-xs-1"></div><% } %>
-									<% if (typeof user !== 'undefined') { %><div class="col-xs-1 song"><a target="_blank" title="Version text" href="../pdfs/<%= song.name %>.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div><% } %>
+									<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite(`<%= song.fileName %>`)" class="fa fa-heart heartsong <%- song.fileName.replace(/\s/g,'').split('.')[0]; %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
+									<% if (typeof user !== 'undefined') { %><div class="col-xs-2 text-center song"><a target="_blank" title="Version text" href="../pdfs/<%= song.pdfName %>"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div><% } %>
 								</div>
 							<% }); %>
 						</div>
@@ -205,7 +203,7 @@
 				</div>
 			</div>
 			<div class="row" style="padding-bottom: 50px;">
-				<div class="col-xs-12 text-center"><a href="#">contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/pdfs/cgu.pdf">CGU</a></div>
+				<div class="col-xs-12 text-center"><a href="#">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="/pdfs/cgu.pdf">CGU</a></div>
 			</div>
 			<div class="row">
 				<div id="playerContainer" class="col-xs-12"></div> <!-- AUDIO PLAYER -->
@@ -228,7 +226,6 @@
 			let categoryHeight = 0;
 
 			jQuery(document).ready(function ($) {
-				console.log(categories);
 				let song = (user ? (user.lastRead ? user.lastRead : null) : null);
 				if (song)
 					makeSong(song, false);
@@ -274,28 +271,29 @@
 			}
 
 			const makeSong = (songName, autoPlay) => {
-				let image = "../images/" + categories.find((elem) => { let toReturn; elem.songs.forEach((el) => { if (el.name == songName) toReturn = el.name }); return toReturn == songName; });
-				image = image.image ? image.image : "../images/hm-logo.jpg";
-				let categoryName;
+				let image = "../images/hm-logo.jpg";
+				let categoryName = "";
+				let songMp3 = "présentation";
 				categories.forEach((categorie) => {
 					let i = categorie.songs.findIndex((el) => {
-						return el.name.toString() == songName.toString();
+						return el.fileName == songName;
 					});
-					console.log(categoryName);
-					if (i > -1) categoryName = categorie.name;
+					if (i > -1) {
+						categoryName = categorie.name;
+						songMp3 = categories.find((el) => { return el.name == categoryName }).songs[i].name;
+					}
 				});
-				console.log(categoryName);
-				$("#playerContainer").html(`<div style="width: 100%;"><audio id='player' style="width: 100%;" src='../audios/${songName}.mp3' preload='auto' type='audio/mpeg' height='40'></audio></div>`);
+				$("#playerContainer").html(`<div style="width: 100%;"><audio id='player' style="width: 100%;" src='../audios/${songName}' preload='auto' type='audio/mpeg' height='40'></audio></div>`);
 				$('#player').mediaelementplayer({
 					success: function (mediaElement) {
 						mediaElement.addEventListener('loadedmetadata', function(){
 							let songCurrentTime;
 							if (user) {
-								$('.mejs__controls').append(`<div onclick="favorite('${user.likes.findIndex((elem) => { return elem.name == songName }) > -1 ? songName : songName}');" class="${songName.replace(/\s/g,'')} mejs__button ${user.likes.findIndex((elem) => { return elem.name == songName }) > -1 ? 'mejs_liked' : 'mejs_like'}"><i class="fa fa-heart fa-heart-spe" aria-hidden="true"></i></div>`);
+								$('.mejs__controls').append(`<div onclick="favorite('${user.likes.findIndex((elem) => { return elem.name == songName }) > -1 ? songName : songName}');" class="${songName.replace(/\s/g,'').split('.')[0]} mejs__button ${user.likes.findIndex((elem) => { return elem.name == songName }) > -1 ? 'mejs_liked' : 'mejs_like'}"><i class="fa fa-heart fa-heart-spe" aria-hidden="true"></i></div>`);
 								songCurrentTime = user.timeRead.find((elem) => { return elem.name == songName });
 							}
 							$('.mejs__controls').prepend(`<div style="padding-top: 8px; margin-right: 5px;" class="mejs__button"><img width="34" src="${image}"/></div>`);
-							$('.mejs__controls').prepend(`<div style="font-size: 10px; width: ${Math.ceil((categoryName.length + songName.length) * 5.2)}px;padding-top: 18px; margin-right: 5px; color: white;" class="mejs__button">${categoryName} - ${songName}</div>`);
+							$('.mejs__controls').prepend(`<div style="font-size: 10px; width: ${Math.ceil((categoryName.length + songName.length) * 5.1)}px;padding-top: 18px; margin-right: 5px; color: white;" class="mejs__button">${categoryName} ${categoryName.length >= 1 ? '-' : ''} ${songMp3}</div>`);
 							if (songCurrentTime) mediaElement.setCurrentTime(songCurrentTime.time >= mediaElement.duration ? 0 : songCurrentTime.time);
 							else mediaElement.setCurrentTime(0);
 							if (autoPlay) {
@@ -319,19 +317,19 @@
 			};
 
 			const favorite = (songName) => {
-				$.post('/favorite/song', { songName }, (datas) => {
+				$.post('/favorite/song', { songName: songName.replace(/\s/g,'').split('.')[0] }, (datas) => {
 					if (datas.error) {
 						console.log(datas);
 					} else {
-						$(`.${songName.replace(/\s/g,'')}`).toggleClass("mejs_like");
-						$(`.${songName.replace(/\s/g,'')}`).toggleClass("mejs_liked");
+						$(`.${songName.replace(/\s/g,'').split('.')[0]}`).toggleClass("mejs_like");
+						$(`.${songName.replace(/\s/g,'').split('.')[0]}`).toggleClass("mejs_liked");
 						user = datas;
 					}
 				});
 			};
 
 			const songClicked = (songName) => {
-				if (songName == "presentation") {
+				if (songName.indexOf("presentation") > -1) {
 					makeSong(songName, true);
 				} else if (!user) {
 					$("#modalAuth").modal('toggle');
