--- a/views/formCategory.ejs
+++ b/views/formCategory.ejs
@@ -14,11 +14,11 @@
 		<div class="container">
 			<%- include header.ejs %>
 			<div class="row" style="font-size: 15px;">
-				<form ref='uploadForm' action="<%= typeof category._id !== 'undefined' ? '/edit/category/' + category._id : '/create/category' %>" encType="multipart/form-data" method="post">
+				<form id="uploadForm" ref='uploadForm' action="<%= typeof category._id !== 'undefined' ? '/edit/category/' + category._id : '/create/category' %>" encType="multipart/form-data" method="post">
 					Nom de la categorie :<br />
 					<input class="col-xs-12" required type="text" value="<%= category.name %>" name="name"><br /><br />
 					Description :<br />
-					<input class="col-xs-12" required type="text" value="<%= category.description %>" name="description"><br /><br />
+					<textarea form="uploadForm" class="col-xs-12" required type="text" name="description"><%= category.description %></textarea><br /><br />
 					Image de présentation :<br />
 					<input class="col-xs-12" <%= typeof category.name !== 'undefined' ? '' : 'required' %> type="file" name="image" accept="image/*"><br /><br />
 					<input class="col-xs-offset-3 col-xs-6" type="submit" value="Envoyer" name="button" />
