--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,7 +127,7 @@
 						<div class="col-xs-9 greenborder">
 							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés : autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
-							<div onclick="songClicked(`presentation.mp3`);" class="song row"><div class="col-xs-offset-1 col-xs-10"><p class="text-center"><i class="fa fa-play-circle" aria-hidden="true"></i>&nbsp; Présentation de La Bulle</p></div></div>
+							<div onclick="songClicked(`presentation.mp3`);" class="song row"><div class="col-xs-offset-4 col-xs-1 presentationSong"><i class="fa fa-play-circle" aria-hidden="true"></i></div><div class="presentationText col-xs-3"><p>Présentation de La Bulle</p></div></div>
 						</div> <!-- TEXT / AUDIO -->
 					</div>
 				</div> <!-- INFOS -->
@@ -162,7 +162,7 @@
 			</div> <!-- INFOS / FORMULAIRE -->
 			<div class="row categoryBody">
 				<% categories.forEach((categorie, index) => { %>
-					<div class="<%= index % 2 == 0 ? 'col-md-offset-1' : '' %> col-md-5 col-xs-12" style="padding-bottom: 50px;">
+					<div class="<%= index % 2 == 0 ? 'col-md-offset-1' : '' %> col-md-5 col-xs-12" style="padding-bottom: 30px;">
 						<div class="category">
 							<div class="row"><div class="col-xs-12"><h3><%= categorie.name %></h3></div></div> <!-- TITRE -->
 							<div class="categoryDesc row">
@@ -177,11 +177,13 @@
 								<% } %>
 								<div class="row">
 									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-offset-1 col-xs-1"><i class="fa <% if (typeof user !== 'undefined') { %>fa-play-circle<% } else { %>fa-lock<% } %>" aria-hidden="true"></i></div>
-									<div onclick="songClicked(`<%= song.fileName %>`);" class="song col-xs-6"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
+									<div onclick="songClicked(`<%= song.fileName %>`);" class="song <%= typeof user !== 'undefined' ? 'col-xs-7' : 'col-xs-9' %>"><p class="text-center"><%= song.name %> - <%- toMinutes(song.duration) %>
 										<div class="whiteloadingbar"><% if (typeof timeRead !== 'undefined') { %><div class="greenloadingbar" id="loadingbar<%= timeRead %>" style="width: <%= (timeRead.time / timeRead.duration) * 100 %>%;"></div><% } %></div></p>
 									</div>
-									<div class="col-xs-1 song"><% if (typeof user !== 'undefined') { %><i onclick="favorite(`<%= song.fileName %>`)" class="fa fa-heart heartsong <%- song.fileName.replace(/\s/g,'').split('.')[0]; %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i><% } %></div>
-									<% if (typeof user !== 'undefined') { %><div class="col-xs-2 text-center song"><a target="_blank" title="Version text" href="../pdfs/<%= song.pdfName %>"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div><% } %>
+									<% if (typeof user !== 'undefined') { %>
+										<div class="col-xs-1 song"><i onclick="favorite(`<%= song.fileName %>`)" class="fa fa-heart heartsong <%- song.fileName.replace(/\s/g,'').split('.')[0]; %> <%= liked > -1 ? 'mejs_liked' : 'mejs_like' %>" aria-hidden="true"></i></div>
+										<div class="col-xs-1 text-center song"><a target="_blank" title="Version text" href="../pdfs/<%= song.pdfName %>"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div>
+									<% } %>
 								</div>
 							<% }); %>
 						</div>
@@ -197,7 +199,7 @@
 								<br />A très vite ;)<br/><span style="float: right;">L’équipe Hello Marcel</span>
 							</p>
 							<br />
-							<a target="_blank" class="avisButton" href="https://www.google.fr/intl/fr/forms/about/">JE DONNE MON AVIS !</a>
+							<a target="_blank" class="button avis" href="https://www.google.fr/intl/fr/forms/about/">JE DONNE MON AVIS !</a>
 						</div>
 					</div>
 				</div>
