--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,14 +120,14 @@
 				</div>
 			<% } %>
 
-			<div style="background-color: black; color: white; padding: 20px 0px 20px 0px;" class="row">
+			<div style="background-color: #2d2d2d; color: white; padding: 20px 0px 20px 0px;" class="row">
 				<div class="<% if (typeof user !== 'undefined') { %>col-xs-12<% } else { %>col-md-8<% } %>">
 					<div class="row">
 						<div class="col-xs-3"><img class="hm-logo" src="../images/hm-logo.jpg" /></div> <!-- LOGO -->
 						<div class="col-xs-9 greenborder">
-							<p>Bienvenue dans La Bulle, le nouveau programme audio d’Hello Marcel !<br />Ces programmes s’adressent à tous les parents et traiteront de thèmes variés : autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…<br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin  avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
+							<p>BIENVENUE DANS LA BULLE HELLO MARCEL, LE COACH AUDIO EN PARENTALITE<br /><br />Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…).<br /><br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
-							<div onclick="songClicked(`presentation.mp3`);" class="song row"><div class="col-xs-offset-4 col-xs-1 presentationSong"><i class="fa fa-play-circle" aria-hidden="true"></i></div><div class="presentationText col-xs-3"><p>Présentation de La Bulle</p></div></div>
+							<div onclick="songClicked(`presentation.mp3`);" class="song row"><div class="col-xs-4"></div><div class="col-xs-5"><p><i class="fa fa-play-circle" style="font-size: 50px;" aria-hidden="true"></i>&nbsp;<span class="presentationText">Présentation de La Bulle</span></p></div></div>
 						</div> <!-- TEXT / AUDIO -->
 					</div>
 				</div> <!-- INFOS -->
