--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,7 +127,7 @@ h3 {
 	color: #51E99D;
 }
 
-.song {
+.song, .presentation {
 	cursor: pointer;
 }
 
@@ -162,6 +162,13 @@ h3 {
 
 .avisButton:hover {
 	background-color: #4DDD99;
+}
+
+.presentation {
+	display: inline-block;
+	background-color: #4DDD99;
+	border-radius: 50px;
+	padding: 0px 10px 5px 10px;
 }
 
 #playerContainer {
@@ -205,7 +212,4 @@ h1 .title {
 }
 
 @media (max-width:1200px) {
-	.avis {
-		height: 290px;
-	}
 }
