--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
 							<p>BIENVENUE DANS LA BULLE HELLO MARCEL, LE COACH AUDIO EN PARENTALITE<br /><br />Parce que quand on est parents, on a plein de questions et peu de temps pour y répondre, nous avons imaginé La Bulle Hello Marcel : des programmes audio courts qui s’adressent à tous les parents et traiteront de thèmes variés (autonomie, développement de la créativité, sommeil, concentration et canalisation de l’énergie ou encore relations dans la fratrie…).<br /><br />En quelques minutes, chaque écoute vous apporte un décryptage et des clés essentielles pour faire votre propre chemin avec vos enfants, sur le thème choisi.<br />Bonne écoute !</p>
 							<br />
 							<div class="text-center row">
-								<span class="presentation" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 3px;">Présentation de La Bulle</span>&nbsp;</span>
+								<span class="presentation" onclick="songClicked(`presentation.mp3`);"><i class="fa fa-play-circle" style="color: #51E99D; font-size: 40px;" aria-hidden="true"></i><span style="position: relative; bottom: 10px; left: 5px;">Intro à La Bulle</span>&nbsp;</span>
 							</div>
 						</div> <!-- TEXT / AUDIO -->
 					</div>
