--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,7 +166,7 @@ h3 {
 
 .presentation {
 	display: inline-block;
-	background-color: #4DDD99;
+	background-color: #666666;
 	border-radius: 50px;
 	padding: 0px 10px 5px 10px;
 }
